--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = hypothesis-csv
+name = hypothesis-csv-chobeat
 description = CSV extension for the Hypothesis framework
 author = Simone Robutti
 author-email = simone.robutti@teraki.com
@@ -27,7 +27,7 @@ package_dir =
     =src
 # Add here dependencies of your project (semicolon-separated), e.g.
 # install_requires = numpy; scipy
-install_requires = 
+install_requires =
 # Add here test requirements (semicolon-separated)
 tests_require = pytest; pytest-cov
 
@@ -38,7 +38,7 @@ exclude =
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install hypothesis-csv[PDF]` like:
+# `pip install hypothesis-csv-chobeat[PDF]` like:
 # PDF = ReportLab; RXP
 
 [test]
