--- a/setup.cfg
+++ b/setup.cfg
@@ -87,6 +87,6 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 3.0.1
-package = hypothesis_csv
+package = hypothesis_csv_chobeat
 extensions =
     no_skeleton
